fix spacing 3

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -109,7 +109,9 @@ html{
 }
 
 .list-view{
+    height: 100%;
     padding: 3%;
+    overflow: scroll;
 }
 
 .dw-ctnr-flex{
@@ -187,6 +189,7 @@ html{
     border-radius: 20px;
     box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.16);
     height: 100px;
+    margin-bottom: 10px;
     position: relative;
     img{
         border-radius: 15px;
@@ -464,7 +467,7 @@ html{
                 align-items: center;
             font-family: "gothamLight";
             font-size: 0.6em;
-            width: 60%;
+            width: 55%;
             input{
                 transform: scale(0.75);
             }
